--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{{site.url}}/css/reset.css" type="text/css" />
     <link rel="stylesheet" href="{{site.url}}/css/styles.css" type="text/css" />
     <title>Fieldwork</title>
-</head>
-<body>
-    Hello world!
-</body>
+  </head>
+  <body>
+    <h1>Fieldwork & Professional Practice</h1>
+    <ul>
+      <li>Grad Show</li>
+      <li>Employers</li>
+      <li>Fieldwork</li>
+    </ul>
+  </body>
 </html>
