--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  border-color: grey;
+  border-style: solid;
+  border-width: 0 1px 0 1px;
   max-width: 90rem;
-  margin: 0 auto;
+  margin: 0 auto 0 auto;
+  padding: 1rem;
+}
+
+#content {
+  
 }
