--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,10 @@ body {
   margin: 0 auto 0 auto;
   padding: 1rem;
 }
-
-#content {
-  
+ul {
+  list-style-type: none;
+}
+ul li {
+  display: inline;
+  padding: 0 2rem;
 }
