create the 3 pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
   <body>
     <h1>Fieldwork & Professional Practice</h1>
     <ul>
-      <li>Grad Show</li>
-      <li>Employers</li>
-      <li>Fieldwork</li>
+      <li><a href="grad-show.html">Grad Show</a></li>
+      <li><a href="employers.html">Employers</a> </li>
+      <li><a href="fieldwork.html">Fieldwork</a></li>
     </ul>
   </body>
 </html>
