--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Fieldwork & Professional Practice</h1>
     <ul>
-      <li><a href="index.html" class="{% if page.name == 'home' %}current{% endif %}">Home</a></li>
+      <li><a href="index.html" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
       <li><a href="grad-show.html" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
       <li><a href="employers.html" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
       <li><a href="fieldwork.html" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
