add links to the nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Fieldwork & Professional Practice</h1>
-    <ul>
+    <ul class="course-pages">
       <li><a href="index.html" class="{% if page.path contains 'index' %}current{% endif %}">Home</a></li>
       <li><a href="grad-show.html" class="{% if page.name contains 'grad' %}current{% endif %}">Grad Show</a></li>
       <li><a href="employers.html" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
