--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,8 @@
       <li><a href="employers.html" class="{% if page.name contains 'employers' %}current{% endif %}">Employers</a> </li>
       <li><a href="fieldwork.html" class="{% if page.name contains 'fieldwork' %}current{% endif %}">Fieldwork</a></li>
     </ul>
+    <div>
+      {{ content }}
+    </div>
   </body>
 </html>
