--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ body {
   margin: 0 auto 0 auto;
   padding: 1rem;
 }
-a, a:link {
+a,
+a:link {
   color: black;
   text-decoration-color: blue;
 }
@@ -23,7 +24,9 @@ a:active {
 a:focus {
   outline: 2px solid black;
 }
-p { margin-top: 1rem; }
+p {
+  margin-top: 1rem;
+}
 ul.course-pages {
   list-style-type: none;
   display: block;
@@ -36,7 +39,9 @@ ul.course-pages li {
   border-right: 1px solid black;
 }
 
-ul.course-pages li:last-of-type { border: 0; }
+ul.course-pages li:last-of-type {
+  border: 0;
+}
 .current {
   font-weight: bold;
 }
