--- a/css/styles.css
+++ b/css/styles.css
@@ -1,70 +1,260 @@
+/*
+
+Amman Sans Pro Regular
+font-family: ff-amman-sans-pro, sans-serif;
+font-weight: 400;
+font-style: normal;
+
+Amman Serif Pro Regular
+font-family: ff-amman-serif-pro, serif;
+font-weight: 400;
+font-style: normal;
+
+Amman Serif Pro Italic
+font-family: ff-amman-serif-pro, serif;
+font-weight: 400;
+font-style: italic;
+
+Amman Serif Pro Bold
+font-family: ff-amman-serif-pro, serif;
+font-weight: 700;
+font-style: normal;
+
+Amman Serif Pro Bold Italic
+font-family: ff-amman-serif-pro, serif;
+font-weight: 700;
+font-style: italic;
+
+*/
+
+:root
+{
+	/* Colours */
+	--dark: #44595E;
+	--medium: #6E8489;
+	--light: #C2C9BD;
+	--orange: #E63E00;
+}
+
+html
+{
+	font-size: 100%;
+	line-height: 1.3;
+}
+
 body
 {
-	font-family: Arial, Helvetica, sans-serif;
-	border-color: grey;
-	border-style: solid;
-	border-width: 0 1px 0 1px;
-	max-width: 90rem;
+	font-family: ff-amman-serif-pro, serif;
+	font-weight: 400;
+	font-style: normal;
+	color: var(--dark);
+	max-width: 1440px;
 	margin: 0 auto 0 auto;
-	padding: 1rem;
+	padding: 0 1rem 0 1rem;
 }
 
-a,
-a:link
+#container
 {
-	color: black;
-	text-decoration-color: blue;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto;
+	gap: 1em 1em;
+	grid-template-areas: "header" "nav" "aside" "main" "footer";
+	border-top: 1rem solid var(--dark);
 }
 
-a:visited { color: rgba(60, 60, 60, 1); }
+header { grid-area: header; }
+nav { grid-area: nav; }
+aside { grid-area: aside; }
+main { grid-area: main; }
+
+footer
+{
+	grid-area: footer;
+	border-top: .25rem solid var(--medium);
+	margin-top: 1rem;
+	padding: 1rem;
+	background-color: var(--light);
+}
+
+h1, h2, h3, h4, h5, h6
+{
+	font-family: ff-amman-serif-pro, serif;
+	font-weight: 700;
+	font-style: normal;
+	color: var(--dark);
+	margin-top: 1rem;
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+h1 + p,
+	h2 + p,
+	h3 + p,
+	h4 + p,
+	h5 + p,
+	h6 + p,
+	h1 + h2,
+	h2 + h3,
+	h3 + h4,
+	h4 + h5,
+	h5 + h6 { margin-top: 0rem; }
+h1 { letter-spacing: -1px; }
+
+a, a:link
+{
+	color: var(--dark);
+	text-decoration-color: var(--orange);
+}
+
+a:visited { color: var(--medium); }
 a:hover { color: lightgrey; }
 a:active { color: orange; }
 a:focus { outline: 2px solid black; }
-p { margin-top: 1rem; }
+p { margin-bottom: .5rem; }
+a.nodecoration { text-decoration: none; }
 
-ul.course-pages
+ul.nav
 {
 	list-style-type: none;
 	display: block;
-	margin: 2rem auto 0 auto;
-	text-align: center;
+	margin-left: 0;
+	padding-left: 0;
 }
 
-ul.course-pages li
+ul.nav li { }
+
+.current
 {
-	display: inline;
-	padding: 0 2rem;
-	border-right: 1px solid black;
+	font-family: ff-amman-serif-pro, serif;
+	font-weight: 700;
+	font-style: normal;
 }
 
-ul.course-pages li:last-of-type { border: 0; }
-.current { font-weight: bold; }
+main ul li
+{
+	font-family: ff-amman-sans-pro, sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 1.25rem;
+}
 
 ul.employers
 {
+	font-family: forma-djr-micro, sans-serif;
+	font-weight: 400;
+	font-style: normal;
 	list-style-type: none;
 	margin-left: 0;
 	padding-left: 0;
 }
 
-ul.employers li.employerName {
-
-}
-
-ul.employers li.contactName,
-ul.employers li.web-site,
-ul.employers li.email {
-	padding-left: 1rem;
-}
-
-ul.employers li.streetAddress {
-	padding-left: 1rem;
-	margin-bottom: 1rem;
-}
+ul.employers li { line-height: 1.5rem; }
 
 .columns3
 {
 	columns: 3 12rem;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+}
+
+.text-center, a.text-center { text-align: center; }
+
+em, bold, .bold
+{
+	font-family: ff-amman-serif-pro, serif;
+	font-weight: 700;
+	font-style: normal;
+}
+
+footer span { display: block; }
+
+
+/* * * * * * * * * * Media Queries * * * * * * * * * */
+/* * * * * * * * * * 400px – 608px * * * * * * * * * */
+
+@media only screen and (min-width: 25em)
+{
+
+}
+
+/* * * * * * * * * * 608px – 960px * * * * * * * * * */
+
+@media only screen and (min-width: 38em)
+{
+html
+{
+	font-size: 110%;
+	line-height: 1.4;
+}
+
+#container
+{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: auto;
+	gap: 0rem 1rem;
+	grid-template-areas:
+	"nav nav nav nav"
+	"header header header header"
+	"main main main aside"
+	"footer footer footer footer";
+	border-top: 0;
+}
+
+nav
+{
+	background-color: var(--dark);
+	border-bottom: .5rem solid var(--light);
+}
+
+header h1 { margin-top: 1rem; }
+
+ul.nav
+{
+	list-style-type: none;
+	display: block;
+	text-align: right;
+	margin: .5rem 0 .5rem 0;
+	padding: 0;
+}
+
+ul.nav li
+{
+	display: inline;
+	padding: 0 2rem;
+	border-right: 1px solid lightgrey;
+}
+
+ul.nav li:last-of-type { border: 0; }
+
+ul.nav a
+{
+	color: white;
+	text-decoration-color: var(--light);
+}
+
+
+}
+
+/* * * * * * * * * * 960px – 1440px * * * * * * * * * */
+
+@media only screen and (min-width: 60em)
+{
+	html
+	{
+		font-size: 120%;
+		line-height: 1.5;
+	}
+}
+
+/* * * * * * * * * * Greater Than 1440px * * * * * * * * * */
+
+@media only screen and (min-width: 90em)
+{
+	html
+	{
+		font-size: 130%;
+		line-height: 1.5;
+	}
 }
