--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,15 @@
-<span class="item">{{ site.data.course-info.course-code }} {{ site.data.course-info.course-name }}</span>
-<span class="item">{{ site.data.course-info.professor }}</span>
-<span class="item"><a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a></span>
-<span class="item">{{ site.data.course-info.phone }}</span>
+<div>
+<span>{{ site.data.course-info.course-code }} {{ site.data.course-info.course-name }}</span>
+<span>{{ site.data.course-info.professor }}</span>
+<span><a href="mailto:{{ site.data.course-info.email }}" title="Alain Paradis' E-Mail Address.">{{ site.data.course-info.email }}</a></span>
+<span>{{ site.data.course-info.phone }}</span>
+</div>
+<div>
+<span><a href="https://algonquindesign.ca" title="AlgonquinDesign.ca">AlgonquinDesign.ca</a></span>
+<span><a href="https://cg.algonquindesign.ca" title="AlgonquinDesign.ca, Computer Graphics">Computer Graphics</a></span>
+<span><a href="https://learn-the-web.algonquindesign.ca" title="AlgonquinDesign.ca, Learn The Web">Learn The Web</a></span>
+<span><a href="https://type.algonquindesign.ca" title="AlgonquinDesign.ca, Typography">Typography</a></span>
+</div>
+<div>
+<span><a href="https://www.algonquincollege.com/international/" title="Algonquin College International Study Centre">International Study Center</a></span>
+</div>
