--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="{{site.baseurl}}/css/reset.css" type="text/css" />
 	<link rel="stylesheet" href="{{site.baseurl}}/css/styles.css" type="text/css" />
 	<link rel="stylesheet" href="https://use.typekit.net/tya4nqf.css">
+	<meta name="theme-color" content="rgb(194, 201, 189)">
 	<title>Fieldwork</title>
 </head>
 <body>
