--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,7 @@
-/*
-
-Amman Sans Pro Regular
-font-family: ff-amman-sans-pro, sans-serif;
-font-weight: 400;
-font-style: normal;
-
-Amman Serif Pro Regular
-font-family: ff-amman-serif-pro, serif;
-font-weight: 400;
-font-style: normal;
-
-Amman Serif Pro Italic
-font-family: ff-amman-serif-pro, serif;
-font-weight: 400;
-font-style: italic;
-
-Amman Serif Pro Medium
-font-family: ff-amman-serif-pro, serif;
-font-weight: 500;
-font-style: normal;
-
-Amman Serif Pro Medium Italic
-font-family: ff-amman-serif-pro, serif;
-font-weight: 500;
-font-style: italic;
-
-Amman Serif Pro Bold
-font-family: ff-amman-serif-pro, serif;
-font-weight: 700;
-font-style: normal;
-
-Amman Serif Pro Bold Italic
-font-family: ff-amman-serif-pro, serif;
-font-weight: 700;
-font-style: italic;
-
-*/
+/* 
+Font Weights:
+300, 400, 500, 600
+ */
 
 :root
 {
@@ -49,13 +15,15 @@ font-style: italic;
 
 html
 {
+	font-weight: 400;
+	font-style: normal;
+	font-family: balto, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 100%;
 	line-height: 1.3;
 }
 
 body
 {
-	font-family: ff-amman-serif-pro, serif;
 	font-weight: 400;
 	font-style: normal;
 	color: var(--dark);
@@ -63,6 +31,8 @@ body
 	margin: 0 auto 0 auto;
 	padding: 0 1rem 0 1rem;
 }
+
+.orange { color: var(--orange); }
 
 a, a:link
 {
@@ -74,14 +44,29 @@ a:visited { color: var(--medium); }
 a:hover { color: lightgrey; }
 a:active { color: orange; }
 a:focus { outline: 2px solid black; }
+header h1 a:visited { color: var(--dark); }
+header h1 a:hover { color: var(--medium); }
 p { margin-bottom: .5rem; }
 a.nodecoration { text-decoration: none; }
-
-
 footer a:visited { color: var(--medium); }
 footer a:hover { color: white; }
 footer a:active { color: orange; }
 footer a:focus { outline: 2px solid black; }
+
+figure svg
+{
+	display: block;
+	max-width: 90%;
+	margin: 2rem auto 0 auto;
+}
+
+figcaption
+{
+	margin: 1rem auto 2rem auto;
+	text-align: center;
+	font-weight: 500;
+	color: var(--medium);
+}
 
 #container
 {
@@ -89,12 +74,7 @@ footer a:focus { outline: 2px solid black; }
 	grid-template-columns: 1fr;
 	grid-template-rows: auto;
 	gap: .5rem 0;
-	grid-template-areas:
-	"header"
-	"nav"
-	"aside"
-	"main"
-	"footer";
+	grid-template-areas: "header" "nav" "aside" "main" "footer";
 	border-top: 1rem solid var(--dark);
 }
 
@@ -112,15 +92,13 @@ nav
 
 nav ul
 {
-	columns: 2 8rem;
+	columns: 1 4rem;
 	font-size: 130%;
 	line-height: 2.5rem;
 }
 
-
 aside { grid-area: aside; }
 main { grid-area: main; }
-
 
 footer
 {
@@ -128,6 +106,7 @@ footer
 	border-top: .25rem solid var(--medium);
 	padding: 1rem;
 	background-color: var(--lightest);
+	font-size: .8rem;
 }
 
 footer div
@@ -137,12 +116,21 @@ footer div
 	vertical-align: top;
 }
 
-footer div:nth-child(n+1) { margin-top: 1rem;}
+footer div:nth-child(n+1) { margin-top: 1rem; }
 
-h1, h2, h3, h4, h5, h6
+h1, h2
 {
-	font-family: ff-amman-serif-pro, serif;
-	font-weight: 700;
+	font-weight: 600;
+	font-style: normal;
+	color: var(--dark);
+	margin-top: 1rem;
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+h3, h4, h5, h6
+{
+	font-weight: 500;
 	font-style: normal;
 	color: var(--dark);
 	margin-top: 1rem;
@@ -161,7 +149,15 @@ h1 + p,
 	h3 + h4,
 	h4 + h5,
 	h5 + h6 { margin-top: 0rem; }
+p + P { margin-bottom: 1rem; }
 h1 { letter-spacing: -1px; }
+
+hr
+{
+	border: 0;
+	background-color: #fff;
+	border-top: 1px dashed #8c8c8c;
+}
 
 ul.nav
 {
@@ -173,64 +169,125 @@ ul.nav
 	margin: 0;
 }
 
-
-ul.nav li { }
-
 .current
 {
-	font-family: ff-amman-serif-pro, serif;
-	font-weight: 700;
 	font-style: normal;
+	font-weight: 600;
 }
 
 main ul li
 {
-	font-family: ff-amman-sans-pro, sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	line-height: 1.25rem;
-	list-style-type: none;
-}
-
-main ul li::before
-{
-	margin-right: 10px;
-	font-size: 1.5rem;
-	content: "•";
 }
 
 ul.employers
 {
-	font-family: forma-djr-micro, sans-serif;
-	font-weight: 400;
-	font-style: normal;
+	padding-left: .5rem;
 	list-style-type: none;
-	margin-left: 0;
-	padding-left: 0;
 }
 
-ul.employers li { line-height: 1.5rem; }
+ul.employers li:nth-child(even)
+{
+	line-height: 140%;
+	margin-bottom: 1rem;
+}
+
+/* 
+ul.employers li:nth-child(even):before {
+	content: "\2709";
+	margin-right: 10px;
+}
+ */
+
+code
+{
+	font-family: "Courier New", Courier, mono;
+	font-weight: bold;
+	font-size: 1rem;
+}
+
+.alertBox
+{
+	border: 1px solid var(--orange);
+	padding: 0 1rem;
+	margin: 2rem;
+}
+
+.alertBox h3 { margin-top: .5rem; }
+
+aside a
+{
+	font-weight: 500;
+	font-style: var(--font_style_normal);
+}
+
+.columns2
+{
+	columns: 2 8rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
 
 .columns3
 {
-	columns: 3 12rem;
+	columns: 3 10rem;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 }
 
 .text-center, a.text-center { text-align: center; }
 
-.medium {
-	font-family: ff-amman-serif-pro, serif;
+dt
+{
 	font-weight: 500;
 	font-style: normal;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 
-em, bold, .bold
+dd { margin: 0 2rem 1rem 2rem; }
+
+.medium
 {
-	font-family: ff-amman-serif-pro, serif;
-	font-weight: 700;
+	font-weight: 500;
+	font-style: var(--font_style_normal);
+}
+.small-caps {
+	font-variant: small-caps;
+	font-weight: 600; }
+
+table
+{
+	width: 100%;
+	border-spacing: .25rem;
+	margin-bottom: 2rem;
+	margin-top: 2rem;
+}
+
+th
+{
+	font-weight: 600;
+	text-align: left;
 	font-style: normal;
+	padding: .25rem;
+	border-bottom: 2px solid grey;
+}
+
+td { font-size: .85rem; width: 33%; border-bottom: 1px solid lightgrey; word-wrap:break-word; }
+
+
+em
+{
+	font-weight: 400;
+	font-style: italic;
+}
+
+strong, bold, .bold
+{
+	font-weight: 600;
+	font-style: var(--font_style_normal);
 }
 
 footer span { display: block; }
@@ -240,70 +297,67 @@ footer span { display: block; }
 
 @media only screen and (min-width: 25em)
 {
-
+	
 }
 
 /* * * * * * * * * * 608px – 960px * * * * * * * * * */
 
 @media only screen and (min-width: 38em)
 {
-html
-{
-	font-size: 110%;
-	line-height: 1.4;
-}
-
-#container
-{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: auto;
-	gap: 1rem 1rem;
-	grid-template-areas:
-	"nav nav nav nav"
-	"header header header header"
-	"main main main aside"
-	"footer footer footer footer";
-	border-top: 0;
-}
-
-nav
-{
-	background-color: var(--dark);
-	border-bottom: .5rem solid var(--light);
-}
-
-header h1 { margin-top: 1rem; }
-nav ul { columns: 1; }
-ul.nav
-{
-	list-style-type: none;
-	display: block;
-	text-align: right;
-	margin: .5rem 0 .5rem 0;
-	padding: 0;
-	font-size: 100%;
-	line-height: 1rem;
-}
-
-
-ul.nav li
-{
-	display: inline;
-	padding: 0 2rem;
-	border-right: 1px solid lightgrey;
-}
-
-ul.nav li:last-of-type { border: 0; }
-
-ul.nav a
-{
-	color: white;
-	text-decoration-color: var(--light);
-}
-
-footer div:nth-child(n+1) { margin-top: 0;}
-
+	html
+	{
+		font-size: 110%;
+		line-height: 1.4;
+	}
+	
+	#container
+	{
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: auto;
+		gap: 1rem 1rem;
+		grid-template-areas: "nav nav nav" "header header header" "main main aside" "footer footer footer";
+		border-top: 0;
+	}
+	
+	nav
+	{
+		background-color: var(--dark);
+		border-bottom: .5rem solid var(--light);
+	}
+	
+	header h1 { margin-top: 1rem; }
+	nav ul { columns: 1; }
+	
+	ul.nav
+	{
+		list-style-type: none;
+		display: block;
+		text-align: right;
+		margin: .5rem 0 .5rem 0;
+		padding: 0;
+		font-size: 100%;
+		line-height: 1rem;
+	}
+	
+	ul.nav li
+	{
+		display: inline;
+		padding: 0 2rem;
+		border-right: 1px solid lightgrey;
+	}
+	
+	ul.nav li:last-of-type { border: 0; }
+	
+	ul.nav a
+	{
+		font-size: .8rem;
+		text-transform: uppercase;
+		color: white;
+		text-decoration-color: var(--light);
+	}
+	
+	footer div:nth-child(n+1) { margin-top: 0; }
 }
 
 /* * * * * * * * * * 960px – 1440px * * * * * * * * * */
